--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,22 +1,19 @@
-# Visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
 name: Metrics
 on:
   # Schedule updates (each hour)
   schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit
-  push: {branches: ["master", "main"]}
+  # Lines below let you run workflow manually and on each commit (optional)
   workflow_dispatch:
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
+      # See action.yml for all options
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ secrets.readme }}
-          # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-
+          token: ${{ secrets.METRICS_TOKEN }}
           # Options
           user: Coordinate-Cat
           template: classic
