--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -10,27 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # See action.yml for all options
-      - uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@master
         with:
           # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
-          # Options
-          user: wolda-wolda
-          template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: Europe/Rome
-          plugin_introduction: yes
-          plugin_introduction_title: yes
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
-          plugin_languages: yes
-          plugin_languages_colors: github
-          plugin_languages_threshold: 0%
-          plugin_pagespeed: yes
-          plugin_pagespeed_url: .user.website
-          plugin_people: yes
-          plugin_people_limit: 28
-          plugin_people_size: 28
-          plugin_people_types: followers, following
-          plugin_stars: yes
-          plugin_stars_limit: 15
