--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,3 +14,17 @@ jobs:
         with:
           # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
+          # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+
+          # Options
+          user: wolda-wolda
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: Europe/Rome
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: year
+          plugin_languages: yes
+          plugin_languages_colors: github
+          plugin_languages_threshold: 0%
+          plugin_lines: yes
