--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -23,7 +23,7 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Rome
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: year
+          plugin_isocalendar_duration: full-year
           plugin_languages: yes
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
